# stukshape

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
src/: stukshape.cpp  stukshape.h
